--- a/lab05/fifteen.html
+++ b/lab05/fifteen.html
@@ -13,8 +13,11 @@
 
 
 		<!-- your files that you will write -->
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<link href="fifteen.css" type="text/css" rel="stylesheet">
 		<script src="fifteen.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		
 	</head>
 
 	<body>
@@ -25,6 +28,14 @@
 			by repeatedly making moves that slide squares into the empty space.
 			How quickly can you solve it?
 		</p>
+		<div id="divtime">
+			<fieldset>
+				<legend>Time</legend>
+				<div>
+				  <span id="time">10</span> sec
+				</div>
+			  </fieldset>
+		</div>
 
 		<div id="puzzlearea">
 			<!-- the following are the actual fifteen puzzle pieces -->
@@ -54,5 +65,9 @@
 				<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" >
 			</a>
 		</div>
+		<div id="selector">
+			you lose!!
+		</div>
+		
 	</body>
 </html>
